[tool.poetry]
name = "inflammation"
version = "1.0.0"
description = "Analyze patient's inflammation data"
authors = ["Long Luu <thelong20.4@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
